[tool.poetry]
name = "tictactoe_cz2842"
version = "0.1.0"
description = "python pacage creation tryout for QMSS MDS homework8"
authors = ["Chengji Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
